<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home">

        <TextView
            android:id="@+id/headerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/museum"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/locationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descriprion"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <ImageView
            android:id="@+id/homeImage"
            android:layout_width="match_parent"
            android:layout_height="263dp"
            app:srcCompat="@drawable/pyramid" />

        <TextView
            android:id="@+id/appInfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

</LinearLayout>

