<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item android:id = "@+id/action_info"
        android:title = "@string/info"
        android:icon="@drawable/ic_action_about"
        android:logo="@drawable/ic_action_about"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_action_settings"
        android:logo="@drawable/ic_action_settings"
        app:showAsAction="ifRoom" />

    <item android:id = "@+id/action_home_menu"
        android:title = "@string/home"/>
    <item android:id = "@+id/action_info_menu"
        android:title="@string/info" />
    <item android:id="@+id/action_painting_menu"
        android:title="Painting"/>
    <item android:id="@+id/action_settings_menu"
        android:title="@string/settings"/>
</menu>
